# find-me

./: .gitignore  README.md
android/: build.gradle  settings.gradle
android/app/: build.gradle
backend/: .dockerignore  .gitignore  Dockerfile  README.md  base.py  config.py  database.py  main.py  pyproject.toml  requerements.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2024_04_14_1700-1a1bbfaa70cf_create_fake_users_and_profiles.py  2024_04_17_2325-017a399f6696_create_users_and_profiles_2.py  2024_04_18_0243-42293f5daab0_.py  2024_04_18_0308-be1f118b18f6_switch_unnullable_attrs_to_nullable_in_.py  2024_04_20_0209-7c50a6d6dec0_add_reactions.py  2024_04_20_1321-ccd01232fb35_add_is_vefied_field_to_profile.py  2024_05_18_2349-29f8a7440317_.py  2024_05_23_1419-fdbad6293ab8_.py  2024_05_25_0950-4572c23c77e3_.py
backend/src/: __init__.py  auth.py  config.py  database.py  main.py
backend/src/chats/: __init__.py  models.py  router.py  schemas.py  service.py  socketmanager.py
backend/src/ml/: SelectingInt.py  photo_handler.py  photo_verification.py  test.py  user_matcher.py  user_matcher_pydentic.py  user_matcher_sqlalch.py  vectorize.py
backend/src/ml/data/: Tfidf_vectorizer.sav  logReg_model.sav
backend/src/ml/data/model_checkpoint/: config.json
backend/src/profiles/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py  services.py
backend/src/reactions/: models.py  router.py  schemas.py  service.py
backend/src/users/: __init__.py  models.py  router.py  schemas.py  service.py
backend/users/: models.py
(+63 files in other folders)
