[tool.poetry]
name = "backend"
version = "0.1.0"
description = "RESTful API for FindMe application"
authors = ["tim2004timi <tim2004timi@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.1"}

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.4.0"}
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
